/*
 * Copyright Â© 2024 Kaleido, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
 * the License. You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
 * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package github.com.kaleido_io.paladin.kata;
option go_package = "pkg/proto/sequence";

// StateClaiomEvent is an event that is emitted when a node has pressumptively claimed a state that it believes to be available ( i.e. either in pending or confirmed metastate).
// if this believe is not held by any other node ( i.e. they beleive it is already claimed) then this will trigger a contention resolution process to determine the rightful claimer of the state.
message StateClaimEvent {
    string state_id = 1;
    string transaction_id = 2;
}

// StateClaimLostEvent is an event that is emitted after a contention resolution process has determined that a claim has been lost by the given transaction
message StateClaimLostEvent {
    string state_id = 1;
    string transaction_id = 2;
}

message ReassembleRequest {
    string transaction_id = 1;   
}

message TransactionAssembledEvent {
    string transaction_id = 1;
    string nodeId = 2;
    repeated string input_state_id = 3;
    repeated string output_state_id = 4;
}

message TransactionEndorsedEvent {
    string transaction_id = 1;
}

message DelegateTransaction {
    string transaction_id = 1;
    string delegating_node_id = 2;
    string delegate_node_id = 3;
}

message TransactionBlockedEvent {
    string transaction_id = 1;
}

message TransactionConfirmedEvent {
    string transaction_id = 1;
}

message TransactionRevertedEvent {
    string transaction_id = 1;
}

message TransactionDelegatedEvent {
    string transaction_id = 1;
    string delegatingNode_id = 2;
    string delegateNode_id = 3;
}